# wireguard-router

./: Cargo.toml  README.md  config.toml  flake.nix
src/: config.rs  error.rs  lib.rs  main.rs  router.rs  state.rs  utils.rs
